tests/spec/parse/snapshots/impl_complex_return_type.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Container<T> {
    items: Vec<T>,
  }
  
  impl<T> Container<T> {
    fn get_all(self: Container<T>) -> Vec<T> {
      return self.items;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Container",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 9,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 18,
                    byte_length: 1,
                },
            },
        ],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "items",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 25,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "Vec",
                        params: [
                            Constructor {
                                name: "T",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 1,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 32,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 40,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Container",
            params: [
                Constructor {
                    name: "T",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 61,
                        byte_length: 1,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 51,
                byte_length: 12,
            },
        },
        receiver_name: "Container",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "get_all",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 71,
                    byte_length: 7,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 79,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Container",
                                params: [
                                    Constructor {
                                        name: "T",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 95,
                                            byte_length: 1,
                                        },
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 85,
                                    byte_length: 12,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "Vec",
                    params: [
                        Constructor {
                            name: "T",
                            params: [],
                            span: Span {
                                file_id: 0,
                                byte_offset: 106,
                                byte_length: 1,
                            },
                        },
                    ],
                    span: Span {
                        file_id: 0,
                        byte_offset: 102,
                        byte_length: 6,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: DotAccess {
                                    expression: Identifier {
                                        value: "self",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 122,
                                            byte_length: 4,
                                        },
                                        resolution: Unresolved,
                                    },
                                    member: "items",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 122,
                                        byte_length: 10,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 115,
                                    byte_length: 17,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 109,
                            byte_length: 28,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 68,
                    byte_length: 69,
                },
            },
        ],
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 48,
                    byte_length: 1,
                },
            },
        ],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 43,
            byte_length: 96,
        },
    },
]
