tests/spec/parse/snapshots/impl_empty.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Empty {}
  
  impl Empty {}
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Empty",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 15,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Empty",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 23,
                byte_length: 5,
            },
        },
        receiver_name: "Empty",
        methods: [],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 18,
            byte_length: 13,
        },
    },
]
